﻿[COLOR yellow][B]wersja 9.2.9[/B] - 2021-04-05[/COLOR]
- poprawiono wydajność działania
- poprawka zanikajacych ikon
- dodane nowe menu pobierania
- dodana opcja cachowania playlisty
- usunięte błędy

[COLOR yellow][B]wersja 9.2.8[/B] - 2021-02-27[/COLOR]
- poprawka serwisu Telia Play
- poprawiony kod statusu odpowiedzi

[COLOR yellow][B]wersja 9.2.7[/B] - 2021-02-26[/COLOR]
- poprawka serwisu Cyfrowy Polsat GO
- poprawka serwisu Nc+ GO

[COLOR yellow][B]wersja 9.2.6[/B] - 2021-02-24[/COLOR]
- poprawka format ciągu timeshift
- dodano Cloudflare bypasser

[COLOR yellow][B]wersja 9.2.5[/B] - 2021-02-22[/COLOR]
- optymalizacje
- poprawione tłumaczenia

[COLOR yellow][B]wersja 9.2.4[/B] - 2021-02-02[/COLOR]
- dodano możliwość planowania wielu pobrań
- naprawiono ustawienie przesunięcia czasu pobierania
- poprawka dotycząca pobierania części programu
- przerobione ustawienia epg, basemap przy dodawaniu kanałów z innych kraji
- dodano automatyczne dodawanie country code do strumieni m3u
- poprawka dla User-Agent
- dodano okno powiadomienia z informacją powodu niedziałających strumieni
- naprawiono tłumaczenie Pythona 3, które powodowało uszkodzenie bazy

[COLOR yellow][B]wersja 9.2.3[/B] - 2021-01-25[/COLOR]
- poprawka checkLogin w serwisie Telia Play

[COLOR yellow][B]wersja 9.2.2[/B] - 2021-01-21[/COLOR]
- dodany nowy serwis PlayerPL
- dodano ustawienie wyboru User-Agent dla playlist
- poprawka serwisu Ipla
- poprawka timestamp z odświeżania tokena dla usługi Telia Play
- naprawiono migające tło paska czasu
- inne ulepszenia

[COLOR yellow][B]wersja 9.2.1[/B] - 2021-01-14[/COLOR]
- poprawka serwisu WP Pilot
- dodano możliwość ręcznego wprowadzania ciasteczek dla usługi WP Pilot
- loadExtraBaseMap niekonieczne by odpalic wtyczke

[COLOR yellow][B]wersja 9.2.0[/B] - 2020-12-31[/COLOR]
- poprawka serwisu Ipla, dodane brakujące kanały
- poprawka szyfrowania utf-8

[COLOR yellow][B]wersja 9.1.9[/B] - 2020-10-31[/COLOR]